Remove --enable-preview